# xigui-pilot

./: README.md  index.html  package.json  pnpm-lock.yaml
.cursor/rules/: desktop-rebuild.mdc
public/: plan-v2.json  plan-wen.json  plan.json  quiz.json  textbook.json
scripts/: SUBTITLE_OVERNIGHT.md  batch_generate_subtitles.py  generate_plan.py  generate_plan_workbooks.py  generate_subtitle.py  generate_textbook_map.py  overnight_subtitles.sh  update-desktop-app.sh  watch_app.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: catalog.rs  commands.rs  lib.rs  macos_overlay_spaces.rs  macos_traffic_lights.rs  main.rs  progress.rs  settings.rs
src/components/: BookTooltip.tsx  CloseButton.tsx  EyeRestPrompt.tsx  HelpGuide.tsx  PinIcon.tsx  PlanTableModal.tsx  ProgressHintMarquee.tsx  StudyPlanSheet.tsx  Tooltip.tsx
src/lib/: api.ts  dynamicPlan.ts  eyeRest.ts  lessonChapter.ts  lessonTags.ts  pacePlan.ts  planLock.ts  planSheetView.ts  playerWindow.ts  quiz.ts  studyPace.ts  studyStage.ts  subtitles.ts  types.ts  wenCatchUp.ts  wenPlan.ts
src/panel/: DynamicPanel.tsx  TodayPanel.tsx
src/player/: EyeRestOverlay.tsx  SubtitleOverlay.tsx  VideoPlayer.tsx
