[package]
name = "xigui-pilot"
version = "0.1.0"
description = "系规备考悬浮助手"
authors = ["bovia"]
edition = "2021"

[lib]
name = "xigui_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
enigo = "0.6.1"
objc2 = "0.6.1"
objc2-app-kit = { version = "0.3.1", features = ["NSView", "NSWindow"] }
